# Boolean-Functions

./: .gitignore  BF.cpp  BF.h  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
src/: BF.cpp  BF.h  BFGeneration.cpp  BFImprove.cpp  BFMetrics.cpp  BFTransforms.cpp  Utils.cpp  Utils.h  main.cpp
test/: bf_tests.cpp
